--- a/Godot/graph_visualizer/.gitignore
+++ b/Godot/graph_visualizer/.gitignore
@@ -47,6 +47,16 @@ test-results/
 .history
 .ionide
 
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Mono-specific ignores
+.mono/
+data_*/
+
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,godot,monodevelop
