--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,26 @@
 
 # Godot-specific ignores
 .import/
+*.import
+*.md5
+*.stex
 export.cfg
 export_presets.cfg
 
 # Mono-specific ignores
 .mono/
 data_*/
+
+# Generated vectors using power points
 vectors_for_images.pptx
 ~$vectors_for_images.pptx
-Propuesta/proposal.aux
-Propuesta/proposal.fdb_latexmk
-Propuesta/proposal.log
+
+# Latex related files
+Propuesta/*.aux
+Propuesta/*.fdb_latexmk
+Propuesta/*.log
+Propuesta/*.synctex.gz
+Propuesta/*.log
+Propuesta/*.bbl
+Propuesta/*.out
+# 
