--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ Propuesta/*.synctex.gz
 Propuesta/*.log
 Propuesta/*.bbl
 Propuesta/*.out
+
+# Godot specific files
+Godot/graph_visualizer/.vscode/*
+Godot/graph_visualizer/.vs/*
+Godot/graph_visualizer/.import/
+Godot/graph_visualizer/export.cfg
+Godot/graph_visualizer/export_presets.cfg
