--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ Godot/graph_visualizer/.vs/*
 Godot/graph_visualizer/.import/
 Godot/graph_visualizer/export.cfg
 Godot/graph_visualizer/export_presets.cfg
+
+AzureFunction/*
+
