--- a/Godot/graph_visualizer/.vscode/launch.json
+++ b/Godot/graph_visualizer/.vscode/launch.json
@@ -2,6 +2,16 @@
     "version": "2.0.0",
     "configurations": [
         {
+            "name": "GDScript",
+            "type": "godot",
+            "request": "launch",
+            "project": "${workspaceFolder}",
+            "port": 6007,
+            "address": "127.0.0.1",
+            "launch_game_instance": true,
+            "launch_scene": false
+        },
+        {
             "name": "Play in Editor",
             "type": "godot-mono",
             "mode": "playInEditor",
