Add Exports folder so each release is not shown in the repository

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ AzureFunction/*
 *.meeting
 ReunionesYAvances/tesis.blg
 ReunionesYAvances/tesis.fls
+Godot/Export/igasce.zip
+
+# All files from the export folder
+Godot/Export/*
