--- a/Godot/graph_visualizer/.vscode/launch.json
+++ b/Godot/graph_visualizer/.vscode/launch.json
@@ -23,7 +23,7 @@
             "request": "launch",
             "mode": "executable",
             "preLaunchTask": "build",
-            "executable": "/home/xubuntual/Applications/Godot/Godot_v3.4.4-stable_mono_x11.64",
+            "executable": "C:\Users\alons\Desktop\Godot_v3.5.2-stable_mono_win64 - Shortcut.lnk",
             // See which arguments are available here:
             // https://docs.godotengine.org/en/stable/getting_started/editor/command_line_tutorial.html
             "executableArguments": [
@@ -37,7 +37,7 @@
             "request": "launch",
             "mode": "executable",
             "preLaunchTask": "build",
-            "executable": "/home/xubuntual/Applications/Godot/Godot_v3.4.4-stable_mono_x11.64",
+            "executable": "C:\Users\alons\Desktop\Godot_v3.5.2-stable_mono_win64 - Shortcut.lnk",
             // See which arguments are available here:
             // https://docs.godotengine.org/en/stable/getting_started/editor/command_line_tutorial.html
             "executableArguments": [
