s.add(t) show a hint of pressing R on the node and also highlights the ADT s

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@ Godot/Export/igasce.zip
 # All files from the export folder
 Godot/Export/*
 ReunionesYAvances/FeedbacksPruebasDeUso.txt
+Tesis/anexoA.tex
+Tesis/*.lof
+Tesis/*.fls
+Tesis/*.blg
+Tesis/*.toc
+Tesis/*.lot
