--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ Tesis/*.synctex(busy)
 Tesis/*.synctex
 Propuesta/*.blg
 Propuesta/*.fls
+Thesis-IGACSE.code-workspace
+*Zone.Identifier
+*.Identifier
